# m5stack-core2-gadget-slint

./: Cargo.toml  README.md  build.rs  env_init.sh  sdkconfig.defaults
.cargo/: config.toml
src/: main.rs  platform.rs  utils.rs
src/applejuice/: devices.rs  mod.rs  task.rs
src/inputevent/: mod.rs  tasks.rs
ui/: main.slint
