[package]
name = "m5core2-gadget"
version = "0.1.0"
authors = ["hyx0329 <hyx0329@163.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "m5core2-gadget"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49", default-features = false }
axp2101 = { version = "0.2.0", path = "../axp2101-rs" }
pcf8563 = { version = "0.1.0", path = "../pcf8563-rs" }
ft6336 = { version = "0.1.0", path = "../ft6336-rs" }
mpu6886 = { version = "0.1.0", path = "../mpu6886-rs" }
ina3221 = { version = "0.1.0", path = "../ina3221-rs" }
# unfortunately no std for slint, because it requires unsupported memmap2 on esp32
# also, it somehow requires f64 which is not supported on esp32's fpu(only f32)
slint = { version = "1.7.2", default-features = false, features = ["compat-1-2", "renderer-software", "unsafe-single-threaded", "libm"] }
mipidsi = "0.8.0"
display-interface-spi = "0.5.0"
embedded-hal-bus = { version = "0.2.0", features = ["std"] }
once_cell = "1.19.0"
embedded-graphics-core = "0.4.0"
esp32-nimble = "0.7.0"

[build-dependencies]
embuild = "0.32.0"
slint-build = "1.7.2"

[patch.crates-io]
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal", rev = "aa0e257ffe308273ad20cfb759ae9849fb02e19d" }
